ServerCalling-V3 Initialization